exports[`no-useless-else > invalid(1): function qux() {\n\tif (foo) {\n\t\touter: do {\n\t\t\twhile (true) {\n\t\t\t\tcontinue outer;\n\t\t\t}\n\t\t} while (process.exit(1));\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		outer: do {
   4 | 			while (true) {
   5 | 				continue outer;
   6 | 			}
   7 | 		} while (process.exit(1));
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(1): function qux() {\n\tif (foo) {\n\t\touter: do {\n\t\t\twhile (true) {\n\t\t\t\tcontinue outer;\n\t\t\t}\n\t\t} while (process.exit(1));\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		outer: do {
   4 | 			while (true) {
   5 | 				continue outer;
   6 | 			}
   7 | 		} while (process.exit(1));
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		outer: do {
   4 | 			while (true) {
   5 | 				continue outer;
   6 | 			}
   7 | 		} while (process.exit(1));
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(10): function qux() {\n\tif (foo) {\n\t\tswitch (bar) {\n\t\t\tcase 1:\n\t\t\tcase 2:\n\t\t\t\treturn;\n\t\t\tdefault:\n\t\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 			case 2:
   6 | 				return;
   7 | 			default:
   8 | 				throw new Error();
   9 | 		}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

`;

exports[`no-useless-else > invalid(10): function qux() {\n\tif (foo) {\n\t\tswitch (bar) {\n\t\t\tcase 1:\n\t\t\tcase 2:\n\t\t\t\treturn;\n\t\t\tdefault:\n\t\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 			case 2:
   6 | 				return;
   7 | 			default:
   8 | 				throw new Error();
   9 | 		}
> 10 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 			case 2:
   6 | 				return;
   7 | 			default:
   8 | 				throw new Error();
   9 | 		}
  10 | 	}
  11 | 	baz();
  12 | }

`;

exports[`no-useless-else > invalid(11): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\treturn doSomething();\n\t\t} catch {\n\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return doSomething();
   5 | 		} catch {
   6 | 			throw new Error();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(11): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\treturn doSomething();\n\t\t} catch {\n\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return doSomething();
   5 | 		} catch {
   6 | 			throw new Error();
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return doSomething();
   5 | 		} catch {
   6 | 			throw new Error();
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(12): function qux() {\n\tif (foo) {\n\t\tif (a) {\n\t\t\treturn;\n\t\t} else if (b) {\n\t\t\tthrow new Error();\n\t\t} else {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (a) {
   4 | 			return;
   5 | 		} else if (b) {
   6 | 			throw new Error();
   7 | 		} else {
   8 | 			return;
   9 | 		}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

`;

exports[`no-useless-else > invalid(12): function qux() {\n\tif (foo) {\n\t\tif (a) {\n\t\t\treturn;\n\t\t} else if (b) {\n\t\t\tthrow new Error();\n\t\t} else {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (a) {
   4 | 			return;
>  5 | 		} else if (b) {
     | 		  ^^^^ Unexpected \`else\` after a statement that exits.
   6 | 			throw new Error();
   7 | 		} else {
   8 | 			return;
   9 | 		}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (a) {
   4 | 			return;
   5 | 		}
   6 | 		if (b) {
   7 | 			throw new Error();
   8 | 		} else {
   9 | 			return;
  10 | 		}
  11 | 	} else {
  12 | 		baz();
  13 | 	}
  14 | }

`;

exports[`no-useless-else > invalid(12): function qux() {\n\tif (foo) {\n\t\tif (a) {\n\t\t\treturn;\n\t\t} else if (b) {\n\t\t\tthrow new Error();\n\t\t} else {\n\t\t\treturn;\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 3`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (a) {
   4 | 			return;
   5 | 		} else if (b) {
   6 | 			throw new Error();
   7 | 		} else {
   8 | 			return;
   9 | 		}
> 10 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (a) {
   4 | 			return;
   5 | 		} else if (b) {
   6 | 			throw new Error();
   7 | 		} else {
   8 | 			return;
   9 | 		}
  10 | 	}
  11 | 	baz();
  12 | }

`;

exports[`no-useless-else > invalid(13): function qux() {\n\touter: for (const a of b) {\n\t\tif (foo) {\n\t\t\tcontinue outer;\n\t\t} else {\n\t\t\tbaz();\n\t\t}\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	outer: for (const a of b) {
  3 | 		if (foo) {
  4 | 			continue outer;
  5 | 		} else {
  6 | 			baz();
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(13): function qux() {\n\touter: for (const a of b) {\n\t\tif (foo) {\n\t\t\tcontinue outer;\n\t\t} else {\n\t\t\tbaz();\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	outer: for (const a of b) {
  3 | 		if (foo) {
  4 | 			continue outer;
> 5 | 		} else {
    | 		  ^^^^ Unexpected \`else\` after a statement that exits.
  6 | 			baz();
  7 | 		}
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	outer: for (const a of b) {
  3 | 		if (foo) {
  4 | 			continue outer;
  5 | 		}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(14): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tdoSomething();\n\t\t} finally {\n\t\t\treturn cleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			doSomething();
   5 | 		} finally {
   6 | 			return cleanup();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(14): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tdoSomething();\n\t\t} finally {\n\t\t\treturn cleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			doSomething();
   5 | 		} finally {
   6 | 			return cleanup();
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			doSomething();
   5 | 		} finally {
   6 | 			return cleanup();
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(15): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else { bar(); }\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else { bar(); }
  5 | }

`;

exports[`no-useless-else > invalid(15): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else { bar(); }\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else { bar(); }
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(16): if (foo) {\n\tthrow new Error();\n} else {\n\tbar();\n} 1`] = `

  1 | if (foo) {
  2 | 	throw new Error();
  3 | } else {
  4 | 	bar();
  5 | }

`;

exports[`no-useless-else > invalid(16): if (foo) {\n\tthrow new Error();\n} else {\n\tbar();\n} 2`] = `

Message:
  1 | if (foo) {
  2 | 	throw new Error();
> 3 | } else {
    |   ^^^^ Unexpected \`else\` after a statement that exits.
  4 | 	bar();
  5 | }

Output:
  1 | if (foo) {
  2 | 	throw new Error();
  3 | }
  4 | bar();

`;

exports[`no-useless-else > invalid(17): function qux() {\n\tif (false) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (false) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(17): function qux() {\n\tif (false) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (false) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (false) {
  3 | 		return;
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(18): function qux() {\n\tif (true) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (true) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(18): function qux() {\n\tif (true) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (true) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (true) {
  3 | 		return;
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(19): while (foo) {\n\tif (bar) {\n\t\tbreak;\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		break;
  4 | 	} else {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(19): while (foo) {\n\tif (bar) {\n\t\tbreak;\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		break;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		break;
  4 | 	}
  5 | 	baz();
  6 | }

`;

exports[`no-useless-else > invalid(2): function qux(condition) {\n\tif (foo) {\n\t\ttry {\n\t\t\tcondition ? process.exit(1) : process.exit(2);\n\t\t} catch {}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux(condition) {
  2 | 	if (foo) {
  3 | 		try {
  4 | 			condition ? process.exit(1) : process.exit(2);
  5 | 		} catch {}
  6 | 	} else {
  7 | 		baz();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(2): function qux(condition) {\n\tif (foo) {\n\t\ttry {\n\t\t\tcondition ? process.exit(1) : process.exit(2);\n\t\t} catch {}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux(condition) {
  2 | 	if (foo) {
  3 | 		try {
  4 | 			condition ? process.exit(1) : process.exit(2);
  5 | 		} catch {}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		baz();
  8 | 	}
  9 | }

Output:
  1 | function qux(condition) {
  2 | 	if (foo) {
  3 | 		try {
  4 | 			condition ? process.exit(1) : process.exit(2);
  5 | 		} catch {}
  6 | 	}
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(20): while (foo) {\n\tif (bar) {\n\t\tcontinue;\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		continue;
  4 | 	} else {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(20): while (foo) {\n\tif (bar) {\n\t\tcontinue;\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		continue;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | while (foo) {
  2 | 	if (bar) {
  3 | 		continue;
  4 | 	}
  5 | 	baz();
  6 | }

`;

exports[`no-useless-else > invalid(21): switch (foo) {\n\tcase bar:\n\t\tif (baz) {\n\t\t\tbreak;\n\t\t} else {\n\t\t\tqux();\n\t\t}\n} 1`] = `

  1 | switch (foo) {
  2 | 	case bar:
  3 | 		if (baz) {
  4 | 			break;
  5 | 		} else {
  6 | 			qux();
  7 | 		}
  8 | }

`;

exports[`no-useless-else > invalid(21): switch (foo) {\n\tcase bar:\n\t\tif (baz) {\n\t\t\tbreak;\n\t\t} else {\n\t\t\tqux();\n\t\t}\n} 2`] = `

Message:
  1 | switch (foo) {
  2 | 	case bar:
  3 | 		if (baz) {
  4 | 			break;
> 5 | 		} else {
    | 		  ^^^^ Unexpected \`else\` after a statement that exits.
  6 | 			qux();
  7 | 		}
  8 | }

Output:
  1 | switch (foo) {
  2 | 	case bar:
  3 | 		if (baz) {
  4 | 			break;
  5 | 		}
  6 | 		qux();
  7 | }

`;

exports[`no-useless-else > invalid(22): class Foo {\n\tstatic {\n\t\tif (foo) {\n\t\t\tthrow new Error();\n\t\t} else {\n\t\t\tbar();\n\t\t}\n\t}\n} 1`] = `

  1 | class Foo {
  2 | 	static {
  3 | 		if (foo) {
  4 | 			throw new Error();
  5 | 		} else {
  6 | 			bar();
  7 | 		}
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(22): class Foo {\n\tstatic {\n\t\tif (foo) {\n\t\t\tthrow new Error();\n\t\t} else {\n\t\t\tbar();\n\t\t}\n\t}\n} 2`] = `

Message:
  1 | class Foo {
  2 | 	static {
  3 | 		if (foo) {
  4 | 			throw new Error();
> 5 | 		} else {
    | 		  ^^^^ Unexpected \`else\` after a statement that exits.
  6 | 			bar();
  7 | 		}
  8 | 	}
  9 | }

Output:
  1 | class Foo {
  2 | 	static {
  3 | 		if (foo) {
  4 | 			throw new Error();
  5 | 		}
  6 | 		bar();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(23): function qux() {\n\tif (foo)\n\t\treturn;\n\telse\n\t\tbar();\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo)
  3 | 		return;
  4 | 	else
  5 | 		bar();
  6 | }

`;

exports[`no-useless-else > invalid(23): function qux() {\n\tif (foo)\n\t\treturn;\n\telse\n\t\tbar();\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo)
  3 | 		return;
> 4 | 	else
    | 	^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | }

Output:
  1 | function qux() {
  2 | 	if (foo)
  3 | 		return;
  4 | 	bar();
  5 | }

`;

exports[`no-useless-else > invalid(24): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else if (bar) {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else if (bar) {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(24): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else if (bar) {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else if (bar) {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	if (bar) {
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(25): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			throw new Error();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(25): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
>  5 | 		} else {
     | 		  ^^^^ Unexpected \`else\` after a statement that exits.
   6 | 			throw new Error();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		}
   6 | 		throw new Error();
   7 | 	} else {
   8 | 		baz();
   9 | 	}
  10 | }

`;

exports[`no-useless-else > invalid(25): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 3`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			throw new Error();
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			throw new Error();
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(26): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t// Keep this comment.\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		// Keep this comment.
  6 | 		bar();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(26): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t// Keep this comment.\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		// Keep this comment.
  6 | 		bar();
  7 | 	}
  8 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	// Keep this comment.
  6 | 	bar();
  7 | }

`;

exports[`no-useless-else > invalid(27): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t/*\n\t\tKeep this comment.\n\t\t*/\n\t\tbar();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
   4 | 	} else {
   5 | 		/*
   6 | 		Keep this comment.
   7 | 		*/
   8 | 		bar();
   9 | 	}
  10 | }

`;

exports[`no-useless-else > invalid(27): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t/*\n\t\tKeep this comment.\n\t\t*/\n\t\tbar();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
>  4 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   5 | 		/*
   6 | 		Keep this comment.
   7 | 		*/
   8 | 		bar();
   9 | 	}
  10 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	/*
  6 | 	Keep this comment.
  7 | 	*/
  8 | 	bar();
  9 | }

`;

exports[`no-useless-else > invalid(28): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar(\`foo\`);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar(\`foo\`);
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(28): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar(\`foo\`);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar(\`foo\`);
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	bar(\`foo\`);
  6 | }

`;

exports[`no-useless-else > invalid(29): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar(\`\n\tleft\n\`);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar(\`
  6 | 	left
  7 | \`);
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(29): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar(\`\n\tleft\n\`);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar(\`
  6 | 	left
  7 | \`);
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(3): function qux(condition) {\n\tif (foo) {\n\t\ttry {\n\t\t\tif (condition) {\n\t\t\t\tprocess.exit(1);\n\t\t\t} else {\n\t\t\t\tprocess.exit(2);\n\t\t\t}\n\t\t} catch {}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux(condition) {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			if (condition) {
   5 | 				process.exit(1);
   6 | 			} else {
   7 | 				process.exit(2);
   8 | 			}
   9 | 		} catch {}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

`;

exports[`no-useless-else > invalid(3): function qux(condition) {\n\tif (foo) {\n\t\ttry {\n\t\t\tif (condition) {\n\t\t\t\tprocess.exit(1);\n\t\t\t} else {\n\t\t\t\tprocess.exit(2);\n\t\t\t}\n\t\t} catch {}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux(condition) {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			if (condition) {
   5 | 				process.exit(1);
>  6 | 			} else {
     | 			  ^^^^ Unexpected \`else\` after a statement that exits.
   7 | 				process.exit(2);
   8 | 			}
   9 | 		} catch {}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux(condition) {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			if (condition) {
   5 | 				process.exit(1);
   6 | 			}
   7 | 			process.exit(2);
   8 | 		} catch {}
   9 | 	} else {
  10 | 		baz();
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(3): function qux(condition) {\n\tif (foo) {\n\t\ttry {\n\t\t\tif (condition) {\n\t\t\t\tprocess.exit(1);\n\t\t\t} else {\n\t\t\t\tprocess.exit(2);\n\t\t\t}\n\t\t} catch {}\n\t} else {\n\t\tbaz();\n\t}\n} 3`] = `

Message:
   1 | function qux(condition) {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			if (condition) {
   5 | 				process.exit(1);
   6 | 			} else {
   7 | 				process.exit(2);
   8 | 			}
   9 | 		} catch {}
> 10 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux(condition) {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			if (condition) {
   5 | 				process.exit(1);
   6 | 			} else {
   7 | 				process.exit(2);
   8 | 			}
   9 | 		} catch {}
  10 | 	}
  11 | 	baz();
  12 | }

`;

exports[`no-useless-else > invalid(30): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar('foo\\\nbar');\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar('foo\\
  6 | bar');
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(30): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar('foo\\\nbar');\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar('foo\\
  6 | bar');
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(31): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\treturn (\n\t\t\t<div>{\`\n\t\t\t\tmultiline\n\t\t\t\ttemplate\n\t\t\t\`}</div>\n\t\t);\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
   4 | 	} else {
   5 | 		return (
   6 | 			<div>{\`
   7 | 				multiline
   8 | 				template
   9 | 			\`}</div>
  10 | 		);
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(31): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\treturn (\n\t\t\t<div>{\`\n\t\t\t\tmultiline\n\t\t\t\ttemplate\n\t\t\t\`}</div>\n\t\t);\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
>  4 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   5 | 		return (
   6 | 			<div>{\`
   7 | 				multiline
   8 | 				template
   9 | 			\`}</div>
  10 | 		);
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(32): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\treturn <pre>\n\t\t\tline\n\t\t</pre>;\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		return <pre>
  6 | 			line
  7 | 		</pre>;
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(32): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\treturn <pre>\n\t\t\tline\n\t\t</pre>;\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		return <pre>
  6 | 			line
  7 | 		</pre>;
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	return <pre>
  6 | 		line
  7 | 	</pre>;
  8 | }

`;

exports[`no-useless-else > invalid(33): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t<Widget title=\"first\n\t\t\tsecond\" />;\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		<Widget title="first
  6 | 			second" />;
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(33): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t<Widget title=\"first\n\t\t\tsecond\" />;\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		<Widget title="first
  6 | 			second" />;
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(34): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\trender(<div>\n\t\t\ttext\n\t\t</div>);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		render(<div>
  6 | 			text
  7 | 		</div>);
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(34): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\trender(<div>\n\t\t\ttext\n\t\t</div>);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		render(<div>
  6 | 			text
  7 | 		</div>);
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	render(<div>
  6 | 		text
  7 | 	</div>);
  8 | }

`;

exports[`no-useless-else > invalid(35): function init() {\n\tif (tagName) {\n\t\taddTagToFooter(tagName);\n\t\treturn;\n\t} else {\n\t\tvoid addReleaseBanner(\n\t\t\t<>\n\t\t\t\tNo <ExplanationLink>stable version tags</ExplanationLink> for this PR.\n\t\t\t</>,\n\t\t\tsignal,\n\t\t);\n\t}\n} 1`] = `

   1 | function init() {
   2 | 	if (tagName) {
   3 | 		addTagToFooter(tagName);
   4 | 		return;
   5 | 	} else {
   6 | 		void addReleaseBanner(
   7 | 			<>
   8 | 				No <ExplanationLink>stable version tags</ExplanationLink> for this PR.
   9 | 			</>,
  10 | 			signal,
  11 | 		);
  12 | 	}
  13 | }

`;

exports[`no-useless-else > invalid(35): function init() {\n\tif (tagName) {\n\t\taddTagToFooter(tagName);\n\t\treturn;\n\t} else {\n\t\tvoid addReleaseBanner(\n\t\t\t<>\n\t\t\t\tNo <ExplanationLink>stable version tags</ExplanationLink> for this PR.\n\t\t\t</>,\n\t\t\tsignal,\n\t\t);\n\t}\n} 2`] = `

Message:
   1 | function init() {
   2 | 	if (tagName) {
   3 | 		addTagToFooter(tagName);
   4 | 		return;
>  5 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   6 | 		void addReleaseBanner(
   7 | 			<>
   8 | 				No <ExplanationLink>stable version tags</ExplanationLink> for this PR.
   9 | 			</>,
  10 | 			signal,
  11 | 		);
  12 | 	}
  13 | }

Output:
   1 | function init() {
   2 | 	if (tagName) {
   3 | 		addTagToFooter(tagName);
   4 | 		return;
   5 | 	}
   6 | 	void addReleaseBanner(
   7 | 		<>
   8 | 			No <ExplanationLink>stable version tags</ExplanationLink> for this PR.
   9 | 		</>,
  10 | 		signal,
  11 | 	);
  12 | }

`;

exports[`no-useless-else > invalid(36): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\trender(<div>\n\t\t\ttext\n\t\t</div>, css\`\n\t\t\tcolor: red;\n\t\t\`);\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
   4 | 	} else {
   5 | 		render(<div>
   6 | 			text
   7 | 		</div>, css\`
   8 | 			color: red;
   9 | 		\`);
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(36): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\trender(<div>\n\t\t\ttext\n\t\t</div>, css\`\n\t\t\tcolor: red;\n\t\t\`);\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
>  4 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   5 | 		render(<div>
   6 | 			text
   7 | 		</div>, css\`
   8 | 			color: red;
   9 | 		\`);
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(37): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tconst bar = 1;\n\t\tbaz(bar);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		const bar = 1;
  6 | 		baz(bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(37): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tconst bar = 1;\n\t\tbaz(bar);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		const bar = 1;
  6 | 		baz(bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(38): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tlet bar = 1;\n\t\tbaz(bar);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		let bar = 1;
  6 | 		baz(bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(38): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tlet bar = 1;\n\t\tbaz(bar);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		let bar = 1;
  6 | 		baz(bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(39): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tclass Bar {}\n\t\tbaz(Bar);\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		class Bar {}
  6 | 		baz(Bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(39): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tclass Bar {}\n\t\tbaz(Bar);\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		class Bar {}
  6 | 		baz(Bar);
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(4): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(4): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	}
  5 | 	bar();
  6 | }

`;

exports[`no-useless-else > invalid(40): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tfunction bar() {}\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		function bar() {}
  6 | 		bar();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(40): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tfunction bar() {}\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		function bar() {}
  6 | 		bar();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(41): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else /* comment */ {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else /* comment */ {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(41): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else /* comment */ {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else /* comment */ {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(42): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} /* comment */ else {\n\t\tbar();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} /* comment */ else {
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(42): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} /* comment */ else {\n\t\tbar();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} /* comment */ else {
    | 	                ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(43): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t} // trailing\n\tbaz();\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar();
  6 | 	} // trailing
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(43): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar();\n\t} // trailing\n\tbaz();\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar();
  6 | 	} // trailing
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(44): function qux(foo) {\n\tif (foo) {\n\t\treturn;\n\t} else function bar() {}\n} 1`] = `

  1 | function qux(foo) {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else function bar() {}
  5 | }

`;

exports[`no-useless-else > invalid(44): function qux(foo) {\n\tif (foo) {\n\t\treturn;\n\t} else function bar() {}\n} 2`] = `

Message:
  1 | function qux(foo) {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else function bar() {}
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | }

`;

exports[`no-useless-else > invalid(45): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar()\n\t} baz()\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar()
  6 | 	} baz()
  7 | }

`;

exports[`no-useless-else > invalid(45): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar()\n\t} baz()\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar()
  6 | 	} baz()
  7 | }

`;

exports[`no-useless-else > invalid(46): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar = function() {}\n\t}\n\t(baz)();\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		bar = function() {}
  6 | 	}
  7 | 	(baz)();
  8 | }

`;

exports[`no-useless-else > invalid(46): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tbar = function() {}\n\t}\n\t(baz)();\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		bar = function() {}
  6 | 	}
  7 | 	(baz)();
  8 | }

`;

exports[`no-useless-else > invalid(47): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t<Foo>\n\t\t\ttext\n\t\t</Foo>\n\t}\n\t<Bar />\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
   4 | 	} else {
   5 | 		<Foo>
   6 | 			text
   7 | 		</Foo>
   8 | 	}
   9 | 	<Bar />
  10 | }

`;

exports[`no-useless-else > invalid(47): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\t<Foo>\n\t\t\ttext\n\t\t</Foo>\n\t}\n\t<Bar />\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		return;
>  4 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   5 | 		<Foo>
   6 | 			text
   7 | 		</Foo>
   8 | 	}
   9 | 	<Bar />
  10 | }

`;

exports[`no-useless-else > invalid(48): function qux() {\n\tif (foo)\n\t\treturn\n\telse\n\t\t[bar].forEach(baz)\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo)
  3 | 		return
  4 | 	else
  5 | 		[bar].forEach(baz)
  6 | }

`;

exports[`no-useless-else > invalid(48): function qux() {\n\tif (foo)\n\t\treturn\n\telse\n\t\t[bar].forEach(baz)\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo)
  3 | 		return
> 4 | 	else
    | 	^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		[bar].forEach(baz)
  6 | }

`;

exports[`no-useless-else > invalid(49): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\ttype Bar = string;\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		type Bar = string;
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(49): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\ttype Bar = string;\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		type Bar = string;
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(5): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\treturn bar();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return bar();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(5): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\treturn bar();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return bar();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			return bar();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(50): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tinterface Bar {}\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		interface Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(50): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tinterface Bar {}\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		interface Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(51): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tenum Bar {}\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		enum Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(51): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tenum Bar {}\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		enum Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(52): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tnamespace Bar {}\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
  4 | 	} else {
  5 | 		namespace Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(52): function qux() {\n\tif (foo) {\n\t\treturn;\n\t} else {\n\t\tnamespace Bar {}\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		return;
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		namespace Bar {}
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(53): function qux() {\n\tif (foo) {\n\t\tprocess.exit();\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit();
  4 | 	} else {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(53): function qux() {\n\tif (foo) {\n\t\tprocess.exit();\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit();
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit();
  4 | 	}
  5 | 	baz();
  6 | }

`;

exports[`no-useless-else > invalid(54): function qux() {\n\tif (foo) {\n\t\ttrue && process.exit();\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		true && process.exit();
  4 | 	} else {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(54): function qux() {\n\tif (foo) {\n\t\ttrue && process.exit();\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		true && process.exit();
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		true && process.exit();
  4 | 	}
  5 | 	baz();
  6 | }

`;

exports[`no-useless-else > invalid(55): function qux() {\n\tif (foo) {\n\t\t[...process.exit()];\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		[...process.exit()];
  4 | 	} else {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(55): function qux() {\n\tif (foo) {\n\t\t[...process.exit()];\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		[...process.exit()];
> 4 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		[...process.exit()];
  4 | 	}
  5 | 	baz();
  6 | }

`;

exports[`no-useless-else > invalid(56): function qux() {\n\tif (foo)\n\t\tprocess.exit(1);\n\telse\n\t\tbaz();\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo)
  3 | 		process.exit(1);
  4 | 	else
  5 | 		baz();
  6 | }

`;

exports[`no-useless-else > invalid(56): function qux() {\n\tif (foo)\n\t\tprocess.exit(1);\n\telse\n\t\tbaz();\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo)
  3 | 		process.exit(1);
> 4 | 	else
    | 	^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | }

Output:
  1 | function qux() {
  2 | 	if (foo)
  3 | 		process.exit(1);
  4 | 	baz();
  5 | }

`;

exports[`no-useless-else > invalid(57): function qux() {\n\tif (foo) {\n\t\tsetup();\n\t\tprocess.exit(1);\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		setup();
  4 | 		process.exit(1);
  5 | 	} else {
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(57): function qux() {\n\tif (foo) {\n\t\tsetup();\n\t\tprocess.exit(1);\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		setup();
  4 | 		process.exit(1);
> 5 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  6 | 		baz();
  7 | 	}
  8 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		setup();
  4 | 		process.exit(1);
  5 | 	}
  6 | 	baz();
  7 | }

`;

exports[`no-useless-else > invalid(58): function qux() {\n\tif (foo) {\n\t\t{\n\t\t\tprocess.exit();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		{
  4 | 			process.exit();
  5 | 		}
  6 | 	} else {
  7 | 		baz();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(58): function qux() {\n\tif (foo) {\n\t\t{\n\t\t\tprocess.exit();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		{
  4 | 			process.exit();
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		baz();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		{
  4 | 			process.exit();
  5 | 		}
  6 | 	}
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(59): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tif (false) {\n\t\t\t\t\tbreak;\n\t\t\t\t}\n\n\t\t\t\tprocess.exit(1);\n\t\t\tdefault:\n\t\t\t\tprocess.exit(2);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (false) {
   6 | 					break;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
  13 | 	} else {
  14 | 		baz();
  15 | 	}
  16 | }

`;

exports[`no-useless-else > invalid(59): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tif (false) {\n\t\t\t\t\tbreak;\n\t\t\t\t}\n\n\t\t\t\tprocess.exit(1);\n\t\t\tdefault:\n\t\t\t\tprocess.exit(2);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (false) {
   6 | 					break;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
> 13 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  14 | 		baz();
  15 | 	}
  16 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (false) {
   6 | 					break;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
  13 | 	}
  14 | 	baz();
  15 | }

`;

exports[`no-useless-else > invalid(6): function qux() {\n\tif (foo) {\n\t\tswitch (bar) {\n\t\t\tcase 1:\n\t\t\t\treturn;\n\t\t\tdefault:\n\t\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 				return;
   6 | 			default:
   7 | 				throw new Error();
   8 | 		}
   9 | 	} else {
  10 | 		baz();
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(6): function qux() {\n\tif (foo) {\n\t\tswitch (bar) {\n\t\t\tcase 1:\n\t\t\t\treturn;\n\t\t\tdefault:\n\t\t\t\tthrow new Error();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 				return;
   6 | 			default:
   7 | 				throw new Error();
   8 | 		}
>  9 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  10 | 		baz();
  11 | 	}
  12 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (bar) {
   4 | 			case 1:
   5 | 				return;
   6 | 			default:
   7 | 				throw new Error();
   8 | 		}
   9 | 	}
  10 | 	baz();
  11 | }

`;

exports[`no-useless-else > invalid(60): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tif (true) {\n\t\t\t\t\treturn;\n\t\t\t\t}\n\t\t\t\tbreak;\n\t\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (true) {
   6 | 					return;
   7 | 				}
   8 | 				break;
   9 | 			default:
  10 | 				process.exit(1);
  11 | 		}
  12 | 	} else {
  13 | 		baz();
  14 | 	}
  15 | }

`;

exports[`no-useless-else > invalid(60): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tif (true) {\n\t\t\t\t\treturn;\n\t\t\t\t}\n\t\t\t\tbreak;\n\t\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (true) {
   6 | 					return;
   7 | 				}
   8 | 				break;
   9 | 			default:
  10 | 				process.exit(1);
  11 | 		}
> 12 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  13 | 		baz();
  14 | 	}
  15 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				if (true) {
   6 | 					return;
   7 | 				}
   8 | 				break;
   9 | 			default:
  10 | 				process.exit(1);
  11 | 		}
  12 | 	}
  13 | 	baz();
  14 | }

`;

exports[`no-useless-else > invalid(61): function qux() {\n\tif (foo) {\n\t\tlabel: {\n\t\t\tif (false) {\n\t\t\t\tbreak label;\n\t\t\t}\n\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		label: {
   4 | 			if (false) {
   5 | 				break label;
   6 | 			}
   7 |
   8 | 			process.exit(1);
   9 | 		}
  10 | 	} else {
  11 | 		baz();
  12 | 	}
  13 | }

`;

exports[`no-useless-else > invalid(61): function qux() {\n\tif (foo) {\n\t\tlabel: {\n\t\t\tif (false) {\n\t\t\t\tbreak label;\n\t\t\t}\n\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		label: {
   4 | 			if (false) {
   5 | 				break label;
   6 | 			}
   7 |
   8 | 			process.exit(1);
   9 | 		}
> 10 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  11 | 		baz();
  12 | 	}
  13 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		label: {
   4 | 			if (false) {
   5 | 				break label;
   6 | 			}
   7 |
   8 | 			process.exit(1);
   9 | 		}
  10 | 	}
  11 | 	baz();
  12 | }

`;

exports[`no-useless-else > invalid(62): function qux() {\n\tif (foo) {\n\t\tprocess.exit(1);\n\t} else if (bar) {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit(1);
  4 | 	} else if (bar) {
  5 | 		baz();
  6 | 	}
  7 | }

`;

exports[`no-useless-else > invalid(62): function qux() {\n\tif (foo) {\n\t\tprocess.exit(1);\n\t} else if (bar) {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit(1);
> 4 | 	} else if (bar) {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  5 | 		baz();
  6 | 	}
  7 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		process.exit(1);
  4 | 	}
  5 | 	if (bar) {
  6 | 		baz();
  7 | 	}
  8 | }

`;

exports[`no-useless-else > invalid(63): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tprocess.exit(1);\n\t\t\tcleanup();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit(1);
   5 | 			cleanup();
   6 | 		} finally {
   7 | 			cleanup();
   8 | 		}
   9 | 	} else {
  10 | 		baz();
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(63): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tprocess.exit(1);\n\t\t\tcleanup();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit(1);
   5 | 			cleanup();
   6 | 		} finally {
   7 | 			cleanup();
   8 | 		}
>  9 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  10 | 		baz();
  11 | 	}
  12 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit(1);
   5 | 			cleanup();
   6 | 		} finally {
   7 | 			cleanup();
   8 | 		}
   9 | 	}
  10 | 	baz();
  11 | }

`;

exports[`no-useless-else > invalid(64): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			process.exit(1);
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(64): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
>  5 | 		} else {
     | 		  ^^^^ Unexpected \`else\` after a statement that exits.
   6 | 			process.exit(1);
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		}
   6 | 		process.exit(1);
   7 | 	} else {
   8 | 		baz();
   9 | 	}
  10 | }

`;

exports[`no-useless-else > invalid(64): function qux() {\n\tif (foo) {\n\t\tif (bar) {\n\t\t\treturn;\n\t\t} else {\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 3`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			process.exit(1);
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		if (bar) {
   4 | 			return;
   5 | 		} else {
   6 | 			process.exit(1);
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(65): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tthrow error;\n\t\t} catch {\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			throw error;
   5 | 		} catch {
   6 | 			process.exit(1);
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(65): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tthrow error;\n\t\t} catch {\n\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			throw error;
   5 | 		} catch {
   6 | 			process.exit(1);
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			throw error;
   5 | 		} catch {
   6 | 			process.exit(1);
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(66): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tlocal: {\n\t\t\t\t\tbreak local;\n\t\t\t\t}\n\n\t\t\t\tprocess.exit(1);\n\t\t\tdefault:\n\t\t\t\tprocess.exit(2);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				local: {
   6 | 					break local;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
  13 | 	} else {
  14 | 		baz();
  15 | 	}
  16 | }

`;

exports[`no-useless-else > invalid(66): function qux() {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tlocal: {\n\t\t\t\t\tbreak local;\n\t\t\t\t}\n\n\t\t\t\tprocess.exit(1);\n\t\t\tdefault:\n\t\t\t\tprocess.exit(2);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				local: {
   6 | 					break local;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
> 13 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  14 | 		baz();
  15 | 	}
  16 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				local: {
   6 | 					break local;
   7 | 				}
   8 |
   9 | 				process.exit(1);
  10 | 			default:
  11 | 				process.exit(2);
  12 | 		}
  13 | 	}
  14 | 	baz();
  15 | }

`;

exports[`no-useless-else > invalid(67): outer: while (condition) {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tbreak outer;\n\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				break outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
   9 | 	} else {
  10 | 		baz();
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(67): outer: while (condition) {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tbreak outer;\n\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				break outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
>  9 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  10 | 		baz();
  11 | 	}
  12 | }

Output:
   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				break outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
   9 | 	}
  10 | 	baz();
  11 | }

`;

exports[`no-useless-else > invalid(68): outer: while (condition) {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tcontinue outer;\n\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				continue outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
   9 | 	} else {
  10 | 		baz();
  11 | 	}
  12 | }

`;

exports[`no-useless-else > invalid(68): outer: while (condition) {\n\tif (foo) {\n\t\tswitch (value) {\n\t\t\tcase 1:\n\t\t\t\tcontinue outer;\n\t\tdefault:\n\t\t\t\tprocess.exit(1);\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				continue outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
>  9 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  10 | 		baz();
  11 | 	}
  12 | }

Output:
   1 | outer: while (condition) {
   2 | 	if (foo) {
   3 | 		switch (value) {
   4 | 			case 1:
   5 | 				continue outer;
   6 | 		default:
   7 | 				process.exit(1);
   8 | 		}
   9 | 	}
  10 | 	baz();
  11 | }

`;

exports[`no-useless-else > invalid(69): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tprocess.exit();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
   8 | 	} else {
   9 | 		baz();
  10 | 	}
  11 | }

`;

exports[`no-useless-else > invalid(69): function qux() {\n\tif (foo) {\n\t\ttry {\n\t\t\tprocess.exit();\n\t\t} finally {\n\t\t\tcleanup();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
>  8 | 	} else {
     | 	  ^^^^ Unexpected \`else\` after a statement that exits.
   9 | 		baz();
  10 | 	}
  11 | }

Output:
   1 | function qux() {
   2 | 	if (foo) {
   3 | 		try {
   4 | 			process.exit();
   5 | 		} finally {
   6 | 			cleanup();
   7 | 		}
   8 | 	}
   9 | 	baz();
  10 | }

`;

exports[`no-useless-else > invalid(7): function qux() {\n\tif (foo) {\n\t\twhile (true) {\n\t\t\tdoSomething();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		while (true) {
  4 | 			doSomething();
  5 | 		}
  6 | 	} else {
  7 | 		baz();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(7): function qux() {\n\tif (foo) {\n\t\twhile (true) {\n\t\t\tdoSomething();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		while (true) {
  4 | 			doSomething();
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		baz();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		while (true) {
  4 | 			doSomething();
  5 | 		}
  6 | 	}
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(8): function qux() {\n\tif (foo) {\n\t\tfor (;;) {\n\t\t\tdoSomething();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		for (;;) {
  4 | 			doSomething();
  5 | 		}
  6 | 	} else {
  7 | 		baz();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(8): function qux() {\n\tif (foo) {\n\t\tfor (;;) {\n\t\t\tdoSomething();\n\t\t}\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		for (;;) {
  4 | 			doSomething();
  5 | 		}
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		baz();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		for (;;) {
  4 | 			doSomething();
  5 | 		}
  6 | 	}
  7 | 	baz();
  8 | }

`;

exports[`no-useless-else > invalid(9): function qux() {\n\tif (foo) {\n\t\tdo {\n\t\t\tdoSomething();\n\t\t} while (true);\n\t} else {\n\t\tbaz();\n\t}\n} 1`] = `

  1 | function qux() {
  2 | 	if (foo) {
  3 | 		do {
  4 | 			doSomething();
  5 | 		} while (true);
  6 | 	} else {
  7 | 		baz();
  8 | 	}
  9 | }

`;

exports[`no-useless-else > invalid(9): function qux() {\n\tif (foo) {\n\t\tdo {\n\t\t\tdoSomething();\n\t\t} while (true);\n\t} else {\n\t\tbaz();\n\t}\n} 2`] = `

Message:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		do {
  4 | 			doSomething();
  5 | 		} while (true);
> 6 | 	} else {
    | 	  ^^^^ Unexpected \`else\` after a statement that exits.
  7 | 		baz();
  8 | 	}
  9 | }

Output:
  1 | function qux() {
  2 | 	if (foo) {
  3 | 		do {
  4 | 			doSomething();
  5 | 		} while (true);
  6 | 	}
  7 | 	baz();
  8 | }

`;
